--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Favorite Movies</title>
+  <title>GifTastic Homework</title>
   <style type="text/css">
     button,
     div,
@@ -17,13 +17,13 @@
 <body>
 
   <div class="container">
-    <h1>Movie Search</h1>
+    <h1>Giphy</h1>
 
     <!-- Movies will get dumped here -->
     <div id="movies-view"></div>
 
     <form id="movie-form">
-      <label for="movie-input">Add a Movie Bro</label>
+      <label for="movie-input">Add a gif/jif</label>
       <input type="text" id="movie-input"><br>
 
       <!-- Button triggers new movie to be added -->
